--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   box-sizing: border-box;
 }
 
@@ -68,4 +68,4 @@ h3 {
   justify-content: space-between;
   font-size: 20px;
   margin-bottom: 10px;
-}
+} */
